admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  labels:
    app: admin-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - name: admin-server
          image: amarnathvenkatam/petclinic-admin-server:dev
          ports:
            - containerPort: 9090
          resources: {}
      restartPolicy: Always
