config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: amarnathvenkatam/petclinic-config-server:dev
          ports:
            - containerPort: 8888
          resources: {}
      restartPolicy: Always
