customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  labels:
    app: customers-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: amarnathvenkatam/petclinic-customers-service:dev
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
