discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: amarnathvenkatam/petclinic-discovery-server:dev
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
