grafana-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
  labels:
    app: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      containers:
        - name: grafana-server
          image: amarnathvenkatam/petclinic-grafana-server:dev
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
