hystrix-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hystrix-dashboard
  labels:
    app: hystrix-dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hystrix-dashboard
  template:
    metadata:
      labels:
        app: hystrix-dashboard
    spec:
      containers:
        - name: hystrix-dashboard
          image: amarnathvenkatam/petclinic-hystrix-dashboard:dev
          ports:
            - containerPort: 7979
          resources: {}
      restartPolicy: Always
