prometheus-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus-server
          image: amarnathvenkatam/petclinic-prometheus-server:dev
          ports:
            - containerPort: 9090
          resources: {}
      restartPolicy: Always
