tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
  labels:
    app: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom
          image: openzipkin/zipkin
          name: tracing-server
          ports:
            - containerPort: 9411
          resources: {}
      restartPolicy: Always
