vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  labels:
    app: vets-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: amarnathvenkatam/petclinic-vets-service:dev
          ports:
            - containerPort: 8083
          resources: {}
      restartPolicy: Always
