visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  labels:
    app: visits-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: amarnathvenkatam/petclinic-visits-service:dev
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
