admin-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  selector:
    app: admin-server
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
