api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: "8080"
      nodePort: 30001
      port: 8080
      targetPort: 8080
