customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: customers-service
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
