discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
