grafana-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-server
spec:
  selector:
    app: grafana-server
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
