hystrix-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hystrix-dashboard
spec:
  selector:
    app: hystrix-dashboard
  ports:
    - name: "7979"
      port: 7979
      targetPort: 7979
