mysql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
spec:
  selector:
    app: mysql-server
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
