prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
spec:
  selector:
    app: prometheus-server
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9090
