tracing-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
spec:
  selector:
    app: tracing-server
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
