vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  selector:
    app: vets-service
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
