visits-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  selector:
    app: visits-service
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
